# apex-middleware-v2

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
runtime/core/src/: error.rs  health.rs  identity.rs  lib.rs  qos.rs
runtime/discovery/src/: lib.rs  peer.rs
runtime/memory/src/: lib.rs
runtime/observability/: Cargo.toml
runtime/observability/src/: error.rs  lib.rs  metrics.rs  registry.rs
runtime/serializer/src/: header.rs  lib.rs
runtime/transport-shm/: Cargo.toml
runtime/transport-shm/src/: channel.rs  error.rs  lib.rs  ring.rs
runtime/transport-tcp/: Cargo.toml
runtime/transport-tcp/src/: codec.rs  connection.rs  error.rs  lib.rs  listener.rs
runtime/transport-udp/: Cargo.toml
runtime/transport-udp/src/: error.rs  frame.rs  lib.rs  multicast.rs  socket.rs
